# CULBM

./: .gitignore  CMakeLists.txt  README.md
analysis/: analysis.ipynb  batch_experiments.py  blocking_analysis.ipynb  blocking_experiments.py  scaling_analysis.ipynb  scaling_experiments.py  selector.py
analysis/correctness/: .gitignore  README.md  compare.py  compare.sh  generate.py  run.sh
analysis/gamma/: README.md  measure.cu
analysis/lambda/: .gitignore  README.md  measure.cu
data/: dump_visualization.ipynb  init_state.ipynb  vis.ipynb
example/: CMakeLists.txt  inplace_stream_check.cu  mix_block_stream_core.cuh  stream_mixblk_compress.cu
scripts/: state_initialization.ipynb
src/: CMakeLists.txt  main.cpp  multi_dev_main.cpp  single_dev_expt_main.cpp
src/basic/: CMakeLists.txt  config.hpp  cu_exception.cu  cu_exception.cuh  defines.hpp  literal.hpp  logger.cpp  logger.hpp  math.hpp  options.cpp  options.hpp  thread_pool.cpp  thread_pool.hpp  types.hpp  vec3.hpp  velocity_set.hpp
src/blocking_core/: CMakeLists.txt  blocking_alogrithm.hpp
src/lbm_core/: CMakeLists.txt  block_based_kernel.cu  block_based_kernel.cuh  device_function.hpp
src/simulator/: CMakeLists.txt
src/simulator/multi_dev/: kernel.cu  kernel.cuh  simulator.cu  simulator.hpp
src/simulator/single_dev/: CMakeLists.txt  simulator.cu  simulator.hpp
src/simulator/single_dev_expt/: CMakeLists.txt  L1L2StreamCore.cuh  kernel.cu  kernel.cuh  local_config.hpp  simulator_expt_platform.cu  simulator_expt_platform.hpp
visualization/: dump_visualization.ipynb  single_dev_blocking.html
